# C_Microservices

./: CMakeLists.txt  README.md  compile.sh  deploy.sh  kill.sh  mapping  run.sh  service.c  stop.sh
src/: gateway.c  service.c
src/gateway/: gateway.c
src/services/c_service/: service.c
src/services/go_service/: main.go
src/services/java_service/: UDPServer.java
src/services/python_service/: python_service.py
src/services/ruby_service/: ruby_service.rb
src/services/rust_service/: main.rs  oiut
